objects/APTS_Stage_DM_Error__c.object
<CustomObject>
    <fields>
        <fullName>APTS_Error_Description__c</fullName>
        <label>Error Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Error_Record_ID__c</fullName>
        <label>Error Record ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Error_Status__c</fullName>
        <label>Error Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_User_Name__c</fullName>
        <label>Batch User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Stage DM Error</label>
    <nameField>
        <label>Stage DM Error Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stage_DM_Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>